assets/sass/partials/_cell.scss
@import "../modules/colors";

.cell button {
  cursor: pointer;
  outline: none;
  background-color: transparent;
  color: lighten(black, 30%);
  border: none;
  &:hover {
    color: lighten(black, 10%);
  }
}

.compactWrapper {
  height: 100%;
  width: 100%;
  position: relative;

  $expandWidth: 24px;

  .compact {
    position: absolute;
    left: 0px;
    right: $expandWidth;
    bottom: 0px;
    top: 0px;
    overflow: hidden;

    ul {
      display: inline-block;
    }

    li {
      display: inline-block;
    }

  }

  .expand {
    position: absolute;
    right: 0px;
    top: 0px;
    bottom: 0px;
    width: $expandWidth;
    text-align: right;

    .fa-expand {
      color: lightgray;
      &:hover {
        color: darken(lightgray, 10%);
      }
    }

    .fa-expand.open {
      color: $link;
      &:hover {
        color: $link-hover;
      }
    }

    $expandLeft: 100px;
    .expanded {
      position: absolute;
      z-index: 10;
      width: 400px;
      top: 40px;
      left: -$expandLeft;
      background-color: white;
      border: 1px solid lightgray;
      box-shadow: 0px 0px 20px 0px lightgray;
      border-radius: 4px;
      &:before {
        content: "";
        position: absolute;
        background-color: white;
        width: 20px;
        height: 20px;
        -webkit-transform: rotate(45deg);
        border-top: 1px solid lightgray;
        border-left: 1px solid lightgray;
        left: $expandLeft;
        top: -11px;
        box-shadow: 0px 0px 20px 0px lightgray;
        z-index: -1;
      }
      .body {
        border-radius: 4px;
        z-index: 20;
        max-height: 600px;
        overflow-y: auto;
        background-color: white;
        padding: 5px;
      }
    }

  }

}

.expanded .list {
  border: 1px solid lightgray;
  display: table;
  width: 100%;
  box-sizing: border-box;
  $buttonWidth: 24px;
  .new-row {
    display: table-row;
    background-color: $light-gray;
    .new-cell {
      display: table-cell;
      width: $buttonWidth;
      padding: 5px;
    }
    .new-content {
      display: table-cell;
    }
  }
  .element {
    display: table-row;
    .delete {
      display: table-cell;
      width: $buttonWidth;
      padding: 5px;
      border-bottom: 1px solid lightgray;
      border-right: 1px solid lightgray;
    }
    & > .content {
      display: table-cell;
      padding: 5px;
      border-bottom: 1px solid lightgray;
    }
  }
}

.compact .list {
  display: inline-block;
  white-space: nowrap;
  .info {
    color: gray;
    font-size: smaller;
    &:after {
      content: " items";
    }
  }
  .element {
    vertical-align: middle;
    margin-left: 5px;
    display: inline-block;
    border: 1px solid lightgray;
    padding: 0px 3px;
    overflow: hidden;
    border-radius: 3px;
    background-color: $light-gray;
    max-width: 60px;
    white-space: nowrap;
  }
}

.maybe {
  $buttonWidth: 24px;
  position: relative;
  display: table;
  width: 100%;
  .button {
    display: table-cell;
    width: $buttonWidth;
    height: 100%;
  }
  .content {
    display: table-cell;
    width: 100%;
    height: 100%;
    vertical-align: middle;
  }

  &.nothing {
    color: gray;
    font-style: italic;
    height: 26px;
  }
  &.just {
  }
}

.cell {
  .error {
    font-size: smaller;
    font-style: italic;
    color: lighten(black, 30%);
  }
}

